objects/Close_Plan__c.object
<CustomObject>
    <fields>
        <fullName>DATES__c</fullName>
        <label>Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXEC_INVOLMENT__c</fullName>
        <label>Exec Involvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HELP_NEEDED__c</fullName>
        <label>Help Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HP_CUSTOMER_3rd_PARTY__c</fullName>
        <label>HP/Customer/3rd Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Plan</label>
        <referenceTo>Opportunity_Plan__c</referenceTo>
        <relationshipLabel>Close Plans</relationshipLabel>
        <relationshipName>Close_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Close_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status1__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Close Plan</label>
    <nameField>
        <displayFormat>Close Plan-{0000}</displayFormat>
        <label>Close Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Close Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>